--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http": "0.0.0",
+    "path": "^0.12.7",
     "ws": "^7.1.1"
   }
 }
