--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http": "0.0.0",
+    "l1-path-finder": "^1.0.0",
     "path": "^0.12.7",
     "ws": "^7.1.1"
   }
